--- a/config-server/config-repo/hebidu-api-bookstore-dev.properties
+++ b/config-server/config-repo/hebidu-api-bookstore-dev.properties
@@ -1,4 +1,4 @@
 message=TestMessage Update v2 Just Commit
 test.message=TestMessage Update v2 Just Commit
 cm.message=TestMessage Update v2 Just Commit
-hebidu.message=test
+hebidu.message=test local
