--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -11,4 +11,4 @@ spring:
           search-paths: config-server/config-repo
           #uri: ${HOME}/Desktop/config
   profiles:
-    active: dev
+    active: default
