--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -13,3 +13,16 @@ spring:
           copyright: hebidu
   profiles:
     active: default
+
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: springcloud
+    password: 136799711
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:  ["health","info","shutdown", "refresh", "bus-refresh"]
+
