test spring.cloud.bus for update config

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -13,6 +13,11 @@ spring:
           copyright: hebidu
   profiles:
     active: default
+  rabbitmq:
+    port: 5672
+    host: 127.0.0.1
+    password: 136799711
+    username: guest
 
 
 management:
@@ -20,4 +25,3 @@ management:
     web:
       exposure:
         include:  ["health","info","shutdown", "refresh", "bus-refresh"]
-
