--- a/config-client/src/main/resources/application.yml
+++ b/config-client/src/main/resources/application.yml
@@ -9,6 +9,7 @@ management:
 spring:
   rabbitmq:
     port: 5672
-    host: 127.0.0.1
+    host: hebidu.cn
     password: 136799711
-    username: guest
+    username: hebidu
+    virtual-host: /
