--- a/config-server/config-repo/eureka-server-dev.yml
+++ b/config-server/config-repo/eureka-server-dev.yml
@@ -1,6 +1,3 @@
-server:
-  port: 8002
-
 ---
 spring:
   profiles: eureka-peer1.hebidu.cn
@@ -9,7 +6,7 @@ eureka:
     hostname: eureka-peer1.hebidu.cn
   client:
     serviceUrl:
-      defaultZone: http://eureka-peer2.hebidu.cn:${server.port}/eureka/
+    defaultZone: http://eureka-peer2.hebidu.cn:8002/eureka/
 
 ---
 spring:
@@ -19,7 +16,4 @@ eureka:
     hostname: eureka-peer2.hebidu.cn
   client:
     serviceUrl:
-      defaultZone: http://eureka-peer1.hebidu.cn:${server.port}/eureka/
-
-
-
+    defaultZone: http://eureka-peer1.hebidu.cn:8002/eureka/
