--- a/eureka-server/src/main/resources/bootstrap.yml
+++ b/eureka-server/src/main/resources/bootstrap.yml
@@ -5,5 +5,5 @@ spring:
     config:
       uri: http://localhost:8001
       name: eureka-server
-      profile: dev
+      profile: peer1
       label: master
