--- a/config-server/config-repo/eureka-server-dev-single.yml
+++ b/config-server/config-repo/eureka-server-dev-single.yml
@@ -5,4 +5,6 @@ eureka:
     hostname: eureka-peer1.hebidu.cn
   client:
     serviceUrl:
+      registerWithEureka: false
+      fetchRegistry: false
       defaultZone: http://eureka-peer2.hebidu.cn:8002/eureka/
