--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -24,6 +24,7 @@
     <dependencies>
 
 
+
         <!-- config Server -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -51,6 +52,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-eureka-client</artifactId>
+            <version>2.0.0.BUILD-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
