--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -47,6 +47,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-bus-parent</artifactId>
+            <version>2.0.0.M5</version>
         </dependency>
 
         <dependency>
