【新增】单独eureka-server配置

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
         overrides:
           copyright: hebidu
   profiles:
-    active: dev
+    active: default
   rabbitmq:
     port: 5672
     host: hebidu.cn
