--- a/config-client/src/main/resources/bootstrap.yml
+++ b/config-client/src/main/resources/bootstrap.yml
@@ -3,6 +3,6 @@ spring:
     name: config-client
   cloud:
     config:
-      uri: http://localhost:8001
+      uri: http://spring.config.server.hebidu.cn:8001
       profile: dev
       label: master
