--- a/microservice/bookstore/pom.xml
+++ b/microservice/bookstore/pom.xml
@@ -63,15 +63,6 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>io.reactivex.rxjava2</groupId>-->
-            <!--<artifactId>rxjava</artifactId>-->
-            <!--<version>2.1.1</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>io.reactivex</groupId>-->
-            <!--<artifactId>rxjava-reactive-streams</artifactId>-->
-        <!--</dependency>-->
         <!-- MongoDB  START -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -79,10 +70,20 @@
         </dependency>
         <!-- MongoDB  END -->
 
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+        </dependency>
+
+        <!-- data jpa START -->
         <!--<dependency>-->
-        <!--<groupId>org.springframework.boot</groupId>-->
-        <!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
         <!--</dependency>-->
+        <!-- data jpa END -->
+
+
         <!--<dependency>-->
             <!--<groupId>org.springframework.boot</groupId>-->
             <!--<artifactId>spring-boot-starter-web</artifactId>-->
