【新增】折腾分页 p p

--- a/microservice/bookstore/src/main/resources/application.yml
+++ b/microservice/bookstore/src/main/resources/application.yml
@@ -6,8 +6,11 @@ spring:
       uri: mongodb://127.0.0.1:27017/bookstore
       field-naming-strategy: org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
       database: bookstore
+
   application:
     name: microservice-bookstore
+  jpa:
+    show-sql: true
 #  datasource:
 #    driver-class-name: com.mysql.jdbc.Driver
 ##    username: root
@@ -35,3 +38,8 @@ management:
     web:
       exposure:
         include: ["health", "info"]
+logging:
+  level:
+    root: info
+    org: debug
+    org.springframework.data.mongodb.core.MongoTemplate: debug
